[project]
name = "bilifm"
version = "0.2.7"
description = "Download Bilibili videos as audios."
authors = [
    {name = "jingfelix", email = "jingfelix@outlook.com"},
    {name = "Felix Jing", email = "jingfelix@outlook.com"},
]
dependencies = [
    "requests>=2.32.4",
    "typer[all]>=0.9.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "GPLv3"}
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/jingfelix/bilifm"
"Bug Tracker" = "https://github.com/jingfelix/bilifm/issues"

[project.scripts]
bilifm = "bilifm.__init__:app"
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"



[tool.pdm]
package-dir = "src"
distribution = true
